syntax = "proto3";

option csharp_namespace = "MicroserviceAralik.Discount.Protos";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";


service CouponService{

   rpc GetCouponById(GetCouponByIdRequest) returns (GetCouponResponse) {
        option (google.api.http) = {
            get: "/api/coupons/{id}"
        };
    }

	rpc GetAllCoupons(EmptyCoupon) returns (GetCouponResponses){

	 option (google.api.http) = {
            get: "/api/coupons"
        };

	}

	rpc CreateCoupon(CreateCouponRequest) returns(GetCouponResponse){
	 option (google.api.http) = {
            post: "/api/coupons",
			body:"*"
        };
	}

	rpc UpdateCoupon(UpdateCouponRequest) returns(GetCouponResponse)
	{
		option (google.api.http) = {
            put: "/api/coupons",
			body:"*"
        };
	}
	rpc DeleteCoupon(DeleteCouponRequest) returns(DeleteCouponResponse)
	{
		 option (google.api.http) = {
            delete: "/api/coupons/{id}"
        };
	}
}
message GetCouponByIdRequest{
	int32 id=1;
}
message GetCouponResponse{
	int32 id=1;
	string code=2;
	int32 rate=3;
	bool isActive=4;
	google.protobuf.Timestamp validDate=5;

}
message GetCouponResponses{
	repeated GetCouponResponse coupons=1;
}
message CreateCouponRequest{
	GetCouponResponse coupon=1;
}
message UpdateCouponRequest{
	GetCouponResponse coupon=1;
}
message DeleteCouponRequest{
		int32 id=1;
}
message DeleteCouponResponse{
	bool isDeleted=1;
}

message EmptyCoupon{}